[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name= "using-threads-to-run-concurrent-code"
path= "./16-fearless-concurrency/1-using-threads-to-run-concurrent-code/example.rs"

[[bin]]
name= "transfer-data-between-threads"
path= "./16-fearless-concurrency/2-transfer-data-between-threads/example.rs"

[[bin]]
name= "shared-state-concurrency"
path= "./16-fearless-concurrency/3-shared-state-concurrency/example.rs"

[dependencies]